# mc-support-desk-w

./: .gitattributes  .gitignore  README.md  alembic.ini  pyproject.toml
infra/: .env  .env.sample  Dockerfile  docker-compose.yml  init-db.sql
supportdesk/app/: config.py  deps.py  logging.py  main.py
supportdesk/app/core/: redis_client.py
supportdesk/app/db/: base.py  session.py
supportdesk/app/db/migrations/: env.py  script.py.mako
supportdesk/app/db/migrations/versions/: 9313649660af_init_schema.py
supportdesk/app/db/models/: __init__.py  customer.py  event.py  label.py  message.py  tenant.py  thread.py
supportdesk/app/routers/: customers.py  health.py  tenants.py
supportdesk/app/schemas/: common.py  customer.py  event.py  label.py  message.py  tenant.py  thread.py
supportdesk/app/tests/: conftest.py  test_health.py  test_tenants.py
